syntax = "proto3";

option csharp_namespace = "Mshop.gRPC.Catalog.Protos";

package product;

import "google/protobuf/any.proto";

service ProductProto {

  rpc GetProductById (GetProductRequest) returns (CustomizedResultGrpc);

}

message CustomizedResultGrpc {
	bool success = 1;
	repeated string errors = 3;
	//google.protobuf.Any data = 2;
	GetProductReply data = 2;
}

message GetProductRequest {
  string id = 1;
}

message GetProductReply {
	string id = 1;
	string description = 2;
	string name = 3;
	float price = 4;
	float stock = 5;
	bool isActive = 6;
	string categoryId = 7;
	string thumb = 8;
	string category	 = 9;  
	bool IsPromotion = 10;
}
